k8s/keycloak/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      component: keycloak
  template:
    metadata:
      labels:
        component: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:19.0.3
          args: ["start", "--auto-build"]
          ports:
            - name: web
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
