k8s/keycloak/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ClusterIP
  selector:
    component: keycloak
  ports:
    - name: web
      port: 8080
      targetPort: web
