k8s/keycloak/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
    - host: keycloak.k8s.prrlvr.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: web
  tls:
    - hosts:
        - keycloak.k8s.prrlvr.fr
      secretName: keycloak-tls
